<resources>
    <string name="app_name">Lab1</string>
    <string name="hello_message">Hello world!</string>
    <string name="ButtonText">I\’m a button</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="RadioButton">RadioButton</string>
    <string name="CheckBox">CheckBox</string>
    <string name="Switch"> Enable Something</string>
    <string name="dialog_message"> Do you want to exit? </string>
    <string name="dialog_title"> Confirm </string>
    <string name="ChatButtonText">Start Chat</string>
    <string name="SendButtonText">Send</string>
    <string name="weatherButton">WeatherForecast</string>
    <string name="msgText">Message Here</string>
    <string name="idText">ID = </string>
    <string name="msgButtonText">Delete this Message</string>
</resources>
