<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_list_items"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.sangita.androidlabs.ListItemsActivity">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:rowOrderPreserved="false"
        android:columnOrderPreserved="false"
        android:columnCount="2"
        android:rowCount="2">
    </GridLayout>

    <RadioButton
        android:text="@string/RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/radioButton"
        android:gravity="fill"
        android:layout_weight="1.0"/>

    <CheckBox
        android:text="@string/CheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="41dp"
        android:id="@+id/checkBox"
        android:gravity="fill"
        android:layout_weight="1.0"/>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@android:drawable/btn_star_big_on"
        android:layout_alignBottom="@+id/switch1"
        android:layout_alignStart="@+id/checkBox"
        android:id="@+id/imageButton"
        android:layout_alignParentEnd="true"
        android:layout_weight="1.0"
        android:gravity="fill"/>

    <Switch
        android:text="@string/Switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:id="@+id/switch1"
        android:gravity="fill"
        android:layout_weight="1.0"
        android:layout_below="@+id/radioButton"
        android:layout_alignParentStart="true" />
</RelativeLayout>
